<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/flashcard_question"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/card_background"
        android:elevation="5dp"
        android:text="@string/how_many_colors_are_in_the_rainbow"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/flashcard_answer"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="113dp"
        android:background="@color/yellow"
        android:text="@string/seven_colors"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/choice_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flashcard_question"
        android:layout_marginStart="0dp"
        android:layout_marginTop="187dp"
        android:background="@color/orange"
        android:text="@string/_6_colors"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/choice_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/choice_three"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-66dp"
        android:background="@color/orange"
        android:text="@string/_7_colors"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/choice_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/choice_one"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="126dp"
        android:background="@color/orange"
        android:text="@string/_5_colors"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/visibility"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/invisible"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/eyeopen"
        android:src="@drawable/eyeopen" />

    <ImageView
        android:id="@+id/invisible"
        android:layout_width="41dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="181dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/eyeclosed"
        android:src="@drawable/eyeclosed" />

    <ImageView
        android:id="@+id/myButton"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/invisible"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/plussign"
        android:src="@drawable/plussign" />

</RelativeLayout>