<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCardActivity">

    <ImageView
        android:id="@+id/exitButton"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/plussign"
        android:src="@drawable/xmark" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/your_question_here" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="211dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/your_answer_here" />

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_above="@+id/exitButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="-43dp"
        android:contentDescription="@string/plussign"
        android:src="@drawable/save" />

</RelativeLayout>